--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ pages:
 
   script:
     - npm install
+    - npm install react-router-dom
+	- npm install axios
     - npm run build
     - mv dist public
 
