--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ variables:
 
 cache:
   paths:
-  - node_modules
+    - node_modules
 
 stages:
   - deploy
@@ -15,14 +15,13 @@ pages:
 
   script:
     - npm install
-    - npm install react-router-dom
-    - npm install axios
     - npm run build
-    - mv dist public
+    - mv public _public
+    - mv build public
 
   artifacts:
     paths:
-    - public
+      - public
 
   only:
     - master
