add npm install react-router-dom

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ pages:
 
   script:
     - npm install
+    - npm install axios
     - npm run build
     - mv public _public
     - mv build public
